# gsoc-2021

./: gsoc.tex  info.tex  intro.tex  meson.build  proposal.tex  schedule.tex  state.tex
